--- a/BootstrapIntroduction/packages.config
+++ b/BootstrapIntroduction/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net452" />
@@ -21,7 +22,7 @@
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
