--- a/BootstrapIntroduction/BootstrapIntroduction.csproj
+++ b/BootstrapIntroduction/BootstrapIntroduction.csproj
@@ -96,6 +96,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -156,7 +158,28 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\Author.cs">
+      <DependentUpon>BookDatabaseFirstContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Book.cs">
+      <DependentUpon>BookDatabaseFirstContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAL\BookContext.cs" />
+    <Compile Include="DAL\BookDatabaseFirstContext.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookDatabaseFirstContext.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\BookDatabaseFirstContext.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookDatabaseFirstContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\BookDatabaseFirstContext.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BookDatabaseFirstContext.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\Person.cs" />
@@ -170,6 +193,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="DAL\BookDatabaseFirstContext.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BookDatabaseFirstContext.edmx</DependentUpon>
+      <LastGenOutput>BookDatabaseFirstContext.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DAL\BookDatabaseFirstContext.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BookDatabaseFirstContext.edmx</DependentUpon>
+      <LastGenOutput>BookDatabaseFirstContext.cs</LastGenOutput>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -185,6 +218,13 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <EntityDeploy Include="DAL\BookDatabaseFirstContext.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BookDatabaseFirstContext.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="DAL\BookDatabaseFirstContext.edmx.diagram">
+      <DependentUpon>BookDatabaseFirstContext.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -230,6 +270,9 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
