--- a/BootstrapIntroduction/Web.config
+++ b/BootstrapIntroduction/Web.config
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-  <add name="BookContext"
-    providerName="System.Data.SqlClient"
-    connectionString="Data Source=DESKTOP-5AU53C7\SQL;Initial Catalog=BootstrapIntroductiton;Integrated Security=True;MultipleActiveResultSets=True" />
-    </connectionStrings>
+  <add name="BookContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-5AU53C7\SQL;Initial Catalog=BootstrapIntroduction;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="BootstrapIntroductionEntities" connectionString="metadata=res://*/DAL.BookDatabaseFirstContext.csdl|res://*/DAL.BookDatabaseFirstContext.ssdl|res://*/DAL.BookDatabaseFirstContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-5AU53C7\SQL;initial catalog=BootstrapIntroduction;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
